# whspr-rs

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
src/: app.rs  audio.rs  cli.rs  config.rs  error.rs  feedback.rs  file_audio.rs  hotkey.rs  inject.rs  main.rs  model.rs  setup.rs  test_support.rs  transcribe.rs
