[package]
name = "whspr-rs"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text dictation tool for Wayland"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio capture
cpal = "0.15"

# Whisper transcription
whisper-rs = "0.14"

# uinput virtual keyboard for paste keystroke
evdev = { version = "0.12" }

# Sound feedback
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Shell expansion for paths
shellexpand = "3"

# Signal sending for PID-based toggle
libc = "0.2"
