[package]
name = "whspr-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Speech-to-text dictation tool for Wayland"
license = "MIT"
repository = "https://github.com/OneNoted/whspr-rs"
keywords = ["wayland", "speech-to-text", "whisper", "dictation", "voice"]
categories = ["accessibility", "multimedia"]
exclude = [".jj/", ".git/", "target/"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }

# Audio capture
cpal = "0.17"

# Whisper transcription
whisper-rs = "0.15"

# uinput virtual keyboard for paste keystroke
evdev = { version = "0.13" }

# Sound feedback
rodio = { version = "0.21", default-features = false, features = ["playback", "wav", "mp3", "flac", "vorbis", "mp4"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Signal sending for PID-based toggle
libc = "0.2"

# Model downloading and management
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
indicatif = "0.18"
futures-util = "0.3"
toml_edit = "0.23"
dialoguer = { version = "0.12", default-features = false }

# OSD overlay (whspr-osd binary) — wayland-native, no GTK
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }

[features]
default = ["osd", "cuda"]
cuda = ["whisper-rs/cuda"]
osd = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]

[[bin]]
name = "whspr-rs"
path = "src/main.rs"

[[bin]]
name = "whspr-osd"
path = "src/bin/whspr-osd.rs"
required-features = ["osd"]

[dev-dependencies]
httpmock = "0.7"
